--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", 
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "store/**/*.ts"
+  ]
 }
